kustomize/manifests/kubeflow/overlays/kubeflow-ptlp/common/istio-1-9-0/istio-install/base/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.n9s.mx.'
spec:
  type: LoadBalancer
  loadBalancerIP: ''
